--- a/mackay/frontend/index.html
+++ b/mackay/frontend/index.html
@@ -1,50 +1,1 @@
-<!doctype html>
-<html lang="zh-Hant">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"><script defer="defer" src="js/chunk-vendors.7db6c636.js"></script><script defer="defer" src="js/app.ef71f049.js"></script><link href="css/chunk-vendors.7d26185d.css" rel="stylesheet"><link href="css/app.1f3969b2.css" rel="stylesheet">
-    {% if chat_ssr %}
-    <title>病患聊天列表 - 線上傷口照護平台 | Patient Chat List - Online Wound Care Platform</title>
-    <meta name="description" content="安全地查看和管理您的傷口照護病患聊天列表。瀏覽最新訊息並進入個別聊天室。 | Securely view and manage your wound care patient chat list. Browse latest messages and enter individual chat rooms.">
-    <meta name="keywords" content="病患列表, 聊天, 傷口照護, 訊息, 遠距醫療, patient list, chat, wound care, messaging, telemedicine, Si Yin Medical">
-    {% elif chat_room_ssr %}
-    <title>病患聊天室 - 線上傷口照護平台 | Patient Chat Room - Online Wound Care Platform</title>
-    <meta name="description" content="與您的病患進行安全的線上聊天。發送訊息、上傳傷口照片，並查看照護紀錄。 | Engage in secure online chat with your patient. Send messages, upload wound photos, and view care records.">
-    <meta name="keywords" content="聊天室, 病患溝通, 傷口照片, 訊息傳送, 遠距照護, chat room, patient communication, wound photo, messaging, remote care, Si Yin Medical">
-    {% else %}
-    <title>登入 - 線上傷口照護平台 | Login - Online Wound Care Platform</title>
-    <meta name="description" content="登入您的線上傷口照護平台帳戶，安全地與您的病患溝通並管理照護記錄。 | Log in to your Online Wound Care Platform account to securely communicate with your patients and manage care records.">
-    <meta name="keywords" content="登入, 傷口照護平台, 安全登入, 遠距醫療登入, login, wound care platform, secure login, telemedicine login, Si Yin Medical">
-    {% endif %}
-  </head>
-    
-  <body><noscript><strong>請啟用您瀏覽器的 JavaScript 功能以使用此應用程式。 | Please enable JavaScript in your browser to use this application.</strong></noscript>
-    <div id="app">
-      {% autoescape off %}
-      {% if chat_ssr %}
-      {% include 'template/chat.html' %}
-      {% elif chat_room_ssr %}
-      {% include 'template/chat-room.html' %}
-      {% else %}
-      <header style="text-align: center; padding: 20px;">
-        <h1>線上傷口照護平台 | Online Wound Care Platform</h1>
-      </header>
-      <main style="padding: 20px; text-align: center;">
-        <h2>登入 | Login</h2>
-        <p>請登入以存取您的帳戶。 | Please log in to access your account.</p>
-        <p>使用 LINE 帳號快速登入/註冊。 | Use your LINE account for quick login/registration.</p>
-        <div style="margin-top: 20px; padding: 10px; border: 1px solid #ccc; display: inline-block;">
-          使用 LINE 帳號登入 (Login with LINE Account)
-        </div>
-      </main>
-      <footer style="text-align: center; padding: 20px; font-size: 0.8em; color: #555;">
-        <p>&copy; 2019 Si Yin Medical Consulting Services Co., Ltd.. All rights reserved.</p>
-      </footer>
-      {% endif %}
-      {% endautoescape %}
-    </div>
-    <script defer="defer" src="js/chunk-vendors.7db6c636.js"></script>
-    <script defer="defer" src="js/app.ef71f049.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="https://storage.googleapis.com/wdcare-file-storage/static/favicon.ico"><title>wound-chat</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"><script defer="defer" src="https://storage.googleapis.com/wdcare-file-storage/static/js/chunk-vendors.7db6c636.js"></script><script defer="defer" src="https://storage.googleapis.com/wdcare-file-storage/static/js/app.29a77871.js"></script><link href="https://storage.googleapis.com/wdcare-file-storage/static/css/chunk-vendors.7d26185d.css" rel="stylesheet"><link href="https://storage.googleapis.com/wdcare-file-storage/static/css/app.1f3969b2.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but wound-chat doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
