--- a/mackay/frontend/index.html
+++ b/mackay/frontend/index.html
@@ -30,14 +30,14 @@
       <header style="text-align: center; padding: 20px;">
         <h1>線上傷口照護平台 | Online Wound Care Platform</h1>
       </header>
-      <main style="padding: 20px; text-align: center;">
+      <div style="padding: 20px; text-align: center;">
         <h2>登入 | Login</h2>
         <p>請登入以存取您的帳戶。 | Please log in to access your account.</p>
         <p>使用 LINE 帳號快速登入/註冊。 | Use your LINE account for quick login/registration.</p>
         <div style="margin-top: 20px; padding: 10px; border: 1px solid #ccc; display: inline-block;">
           使用 LINE 帳號登入 (Login with LINE Account)
         </div>
-      </main>
+      </div>
       <footer style="text-align: center; padding: 20px; font-size: 0.8em; color: #555;">
         <p>&copy; 2019 Si Yin Medical Consulting Services Co., Ltd.. All rights reserved.</p>
       </footer>
